- Fix product slider update-1. - Fix z-index on scroll.

--- a/src/index.css
+++ b/src/index.css
@@ -323,6 +323,7 @@ body {
 .scroll-to-top.show {
   opacity: 1;
   visibility: visible;
+  z-index: 1500;
 }
 
 .scroll-to-top.hide {
